--- a/laera_svenska.html
+++ b/laera_svenska.html
@@ -23,9 +23,9 @@
         </div>
         <nav>
           <ul>
-            <li class= "current"><a href="index.html">Hem</a></li>
+            <li><a href="index.html">Hem</a></li>
             <li><a href="index.html">Reser till Sverige</a></li>
-            <li><a href="index.html">Vill du lär dig svenska?</a></li>
+            <li class= "current"><a href="index.html">Vill du lär dig svenska?</a></li>
           </ul>
         </nav>
       </div>
