--- a/laera_svenska.html
+++ b/laera_svenska.html
@@ -23,76 +23,62 @@
         </div>
         <nav>
           <ul>
-            <li><a href="index.html">Hem</a></li>
+            <li class= "current"><a href="index.html">Hem</a></li>
             <li><a href="index.html">Reser till Sverige</a></li>
-            <li class= "current"><a href="index.html">Vill du lär dig svenska?</a></li>
+            <li><a href="index.html">Vill du lär dig svenska?</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <section id="kafe-droppen">
       <div class="container">
-          <h2>Efter träningen</h2>
-          <h3>
-            Frank, Johan och Sara sitter på 'Kafé Droppen' efter träningen.
-          </h3>
+          <button id="btn-3d" onclick="showOrHideDialog()">Lektion 3 - Dialog</button>
+
+          <div id="lektion-3-dialog">
+            <h2>Efter träningen</h2>
+            <h3>
+              Frank, Johan och Sara sitter på 'Kafé Droppen' efter träningen.
+            </h3>
+            <p>
+            Jag är jättetrött. Gymnastiken är verkligen jobbig.<br>
+            Du har rätt - jag är ochså helt slut.<br>
+            Varför heter det aerobics och spinning? Vad heter sporterna på svenska?<br>Jag vet inte. Man brukar bara använda de engelska namnen.<br>Det är synd. Jag tycker om svenska.<br>Du har rätt. Det gör jag också.</p>
+            <p>
+            Titta, de har också yogakurser.<br>Ja. Tycker du om yoga?<br>Ja, det gör jag. Jag brukar göra yoga hemma flera gånger i veckan, men ofta stör någon, telefonen ringer eller grannarna bråkar.<br>Oi, men gör yoga här i stället. Här finns varken telefoner eller grannar.<br>Det låter skönt.
+          </p>
+          <p>Varför har de tennisbollar i handen? Kan man spela tennis här också?<br>Ja, här finns många möjligheter.<br>Men var ligger banorna?<br>
+            De är ute. Tennis kan man bara spela på sommaren.</p>
+            <p>Kan man göra andra bollsporter också?<br>Ja, det kan man. Det finns en hall för innebandy och fotboll också.<br>Jag tycker mycket om att spela fotboll. Gör ni?<br>Jag tycker också om fotboll och brukar spela två gånger i veckan, men bara på skoj.<br>Gör du? Vad bra!
+          </p>
+          <h3>Malin arbetar i receptionen på 'Kom i form'</h3>
           <p>
-          Jag är jättetrött. Gymnastiken är verkligen jobbig.<br>
-          Du har rätt - jag är ochså helt slut.<br>
-          Varför heter det aerobics och spinning? Vad heter sporterna på svenska?<br>Jag vet inte. Man brukar bara använda de engelska namnen.<br>Det är synd. Jag tycker om svenska.<br>Du har rätt. Det gör jag också.</p>
-          <p>
-          Titta, de har också yogakurser.<br>Ja. Tycker du om yoga?<br>Ja, det gör jag. Jag brukar göra yoga hemma flera gånger i veckan, men ofta stör någon, telefonen ringer eller grannarna bråkar.<br>Oi, men gör yoga här i stället. Här finns varken telefoner eller grannar.<br>Det låter skönt.
-        </p>
-        <p>Varför har de tennisbollar i handen? Kan man spela tennis här också?<br>Ja, här finns många möjligheter.<br>Men var ligger banorna?<br>
-          De är ute. Tennis kan man bara spela på sommaren.</p>
-          <p>Kan man göra andra bollsporter också?<br>Ja, det kan man. Det finns en hall för innebandy och fotboll också.<br>Jag tycker mycket om att spela fotboll. Gör ni?<br>Jag tycker också om fotboll och brukar spela två gånger i veckan, men bara på skoj.<br>Gör du? Vad bra!
-        </p>
+            Hej! Hej, jag vill börja en yogakurs. Gärna, vilken dag? Helst måndag eller torsdag. Hm, i måndagsgruppen från klockan arton till nitton finns det fyra platser. Jag arbetar till arton. Har ni plats senare på kvällen? Ja, du har tur, det har vi. Vilken tid? Från tjugo till tjugoett. Passar de? Ja, det gör det. Perfekt!
+          </p>
+          <p>Och du heter? Frank Heiner. Tack, du är välkommen på måndag klockan tjugo.
+          </p>
+          </div>
+
       </div>
     </section>
-    <!--
-    <div class="container">
-      <section id="gotland">
-        <div class="right">
-          <p>Visby Jeden Sommer Mittelalterfest (32. Kalenderwoche), Stadtmauer aus dem 13.Jahrhundert, um sich gegen die Landbevölkerung zu schützen; Umgebung von Visby: Steinformationen in Schiffform, 3000 Jahre alt; Kalabalik: Wikingerband aus Stockholm, VÄSTERHEJDE (7KM) südlichmit preisgekröntem ökologischem Restaurant 'Lilla Bjers' (kleiner Hügel);
-          Das Mittelalterfest dauert eine Woche.
-          </p>
-          <p>
-            Gotlands Museum in visby, Visby war Mitglied der Hanse, Saga Björling (Sängerin)
-            Lickershamn etwas nördlich von Visby mit kleinem Hafen ehemals für Fischerboote, Kiesstrand mit Fossilien, großem Naturreservat (perfekt zum Wandern) im Norden Kalksteinmuseum, neben dem Museum Holzhütten, die man für wenig Geld mieten kann
-
-            Blaue Lagune bei Ar im Norden - Badesee
-  </p>
-      </div>
-      <div>
-        <p>
-          Kneippbyn - Erlebnispark
-          "Vattenland" mit außergewöhnlichen Wasserrutschen
-          Pippis Originalvilla
-
-          Kartenspiel Visby
-
-          Europas größte Eisdiele befindet sich auf Gotland.
-
-          Auf Gotland kann man aufgrund des Flachlandes gut radfahren.
-
-          Fårö - Schwesterinsel im Norden
-          bizzare Felslandschaften
-          Bergman Center
-          Leuchtturm am nördlichen Punkt
-
-
-          auf Gotland gibt es 300 Sonnentage im Jahr
-        </p>
-      </div>
-
-      </section>
-    -->
-
-
     <footer>
       <p>
         Copyright &copy; Teoman Dogueri 2022
       </p>
     </footer>
+    <script type="text/javascript">
+      let btn = document.getElementById('btn-3d')
+      let dialog = document.getElementById('lektion-3-dialog')
+      let dialogIsVisible = false
+
+      function showOrHideDialog(){
+        if (dialogIsVisible == false){
+          dialog.style.display = 'block';
+        }
+        else {
+          dialog.style.display = 'none';
+        }
+        dialogIsVisible = !dialogIsVisible
+      }
+    </script>
   </body>
 </html>
