--- a/laera_svenska.html
+++ b/laera_svenska.html
@@ -65,7 +65,7 @@
         Copyright &copy; Teoman Dogueri 2022
       </p>
     </footer>
-    <script type="text/javascript">
+    <script>
       let btn = document.getElementById('btn-3d')
       let dialog = document.getElementById('lektion-3-dialog')
       let dialogIsVisible = false
