--- a/laera_svenska.html
+++ b/laera_svenska.html
@@ -10,7 +10,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
-
+  <style>
+    footer {
+      margin: 400px 0 0 0;
+    }
+  </style>
   </head>
   <body>
     <header>
