--- a/laera_svenska.html
+++ b/laera_svenska.html
@@ -36,30 +36,56 @@
     </header>
     <section id="kafe-droppen">
       <div class="container">
-          <button id="btn-3d" onclick="showOrHideDialog()">Lektion 3 - Dialog</button>
+          <button id="btn-3d" onclick="showOrHideDialog()">Lektion 3</button>
 
           <div id="lektion-3-dialog">
-            <h2>Efter träningen</h2>
-            <h3>
-              Frank, Johan och Sara sitter på 'Kafé Droppen' efter träningen.
-            </h3>
-            <p>
-            Jag är jättetrött. Gymnastiken är verkligen jobbig.<br>
-            Du har rätt - jag är ochså helt slut.<br>
-            Varför heter det aerobics och spinning? Vad heter sporterna på svenska?<br>Jag vet inte. Man brukar bara använda de engelska namnen.<br>Det är synd. Jag tycker om svenska.<br>Du har rätt. Det gör jag också.</p>
-            <p>
-            Titta, de har också yogakurser.<br>Ja. Tycker du om yoga?<br>Ja, det gör jag. Jag brukar göra yoga hemma flera gånger i veckan, men ofta stör någon, telefonen ringer eller grannarna bråkar.<br>Oi, men gör yoga här i stället. Här finns varken telefoner eller grannar.<br>Det låter skönt.
-          </p>
-          <p>Varför har de tennisbollar i handen? Kan man spela tennis här också?<br>Ja, här finns många möjligheter.<br>Men var ligger banorna?<br>
-            De är ute. Tennis kan man bara spela på sommaren.</p>
-            <p>Kan man göra andra bollsporter också?<br>Ja, det kan man. Det finns en hall för innebandy och fotboll också.<br>Jag tycker mycket om att spela fotboll. Gör ni?<br>Jag tycker också om fotboll och brukar spela två gånger i veckan, men bara på skoj.<br>Gör du? Vad bra!
-          </p>
-          <h3>Malin arbetar i receptionen på 'Kom i form'</h3>
-          <p>
-            Hej! Hej, jag vill börja en yogakurs. Gärna, vilken dag? Helst måndag eller torsdag. Hm, i måndagsgruppen från klockan arton till nitton finns det fyra platser. Jag arbetar till arton. Har ni plats senare på kvällen? Ja, du har tur, det har vi. Vilken tid? Från tjugo till tjugoett. Passar de? Ja, det gör det. Perfekt!
-          </p>
-          <p>Och du heter? Frank Heiner. Tack, du är välkommen på måndag klockan tjugo.
-          </p>
+              <ul id="text">
+                <li>
+                  <h2>Kom i form till sommaren!</h2>
+                  <p>Nu är vårens programm här med många aktiviteter.<br>Klicka på länkarna och se några exempel ur programmet!</p>
+                  <h3>Aerobics</h3>
+                  <hr>
+                  <p>En klassiker. Träna till musiken och rör musklerna. <br>Efter bara några gånger är formen där.</p>
+                  <h3>Spinning</h3>
+                  <hr>
+                  <p>Cykla bort kilona och förbättra konditionen.
+                     <br>Vi har cyklarna, du trampar!</p>
+                  <h3>Power Yoga</h3>
+                  <hr>
+                  <p>Övningarna mjukar upp musklerna.</p>
+                  <p><em>Ta gärna med barnen till 'Kom i form'. Lekrummet är öppet för alla barn i åldrarna ett till tolv, Lekledarna är där alla dagar från 16:30 till 20:30. Kom och lek!</em></p>
+                </li>
+                <li>
+                  <h2>Efter träningen</h2>
+                  <em>
+                    Frank, Johan och Sara sitter på 'Kafé Droppen' efter träningen.
+                  </em>
+                  <p>
+                    Jag är jättetrött. Gymnastiken är verkligen jobbig.<br>
+                    Du har rätt - jag är ochså helt slut.<br>
+                    Varför heter det aerobics och spinning? Vad heter sporterna på svenska?<br>Jag vet inte. Man brukar bara använda de engelska namnen.<br>Det är synd. Jag tycker om svenska.<br>Du har rätt. Det gör jag också.</p>
+                  <p>
+                    Titta, de har också yogakurser.<br>Ja. Tycker du om yoga?<br>Ja, det gör jag. Jag brukar göra yoga hemma flera gånger i veckan, men ofta stör någon, telefonen ringer eller grannarna bråkar.<br>Oi, men gör yoga här i stället. Här finns varken telefoner eller grannar.<br>Det låter skönt.
+                    </p>
+                  <p>
+                    Varför har de tennisbollar i handen? Kan man spela tennis här också?<br>Ja, här finns många möjligheter.<br>Men var ligger banorna?<br>
+                    De är ute. Tennis kan man bara spela på sommaren.</p>
+                  <p>Kan man göra andra bollsporter också?<br>Ja, det kan man. Det finns en hall för innebandy och fotboll också.<br>Jag tycker mycket om att spela fotboll. Gör ni?<br>Jag tycker också om fotboll och brukar spela två gånger i veckan, men bara på skoj.<br>Gör du? Vad bra!</p>
+
+                <em>Malin arbetar i receptionen på 'Kom i form'</em>
+                <p>
+                  Hej! Hej, jag vill börja en yogakurs. Gärna, vilken dag? Helst måndag eller torsdag. Hm, i måndagsgruppen från klockan arton till nitton finns det fyra platser. Jag arbetar till arton. Har ni plats senare på kvällen? Ja, du har tur, det har vi. Vilken tid? Från tjugo till tjugoett. Passar de? Ja, det gör det. Perfekt!</p>
+                <p>Och du heter? Frank Heiner. Tack, du är välkommen på måndag klockan tjugo.</p>
+                </li>
+                <li>
+                  <p>Har ni plats?<br>Ja, det har vi | Nej, det har vi inte</p>
+                  <p>Är du i form?<br>Ja, det är jag | Nej, det är jag inte</p>
+                  <p>Vill du spela tennis?<br>Ja, det vill jag | Nej, det vill jag inte</p>
+                  <p>Tycker du om fotboll?<br>Ja, det gör jag | Nej, det gör jag inte</p>
+                </li>
+              </ul>
+
+
           </div>
 
       </div>
