--- a/laera_svenska.html
+++ b/laera_svenska.html
@@ -53,7 +53,7 @@
                   <h3>Power Yoga</h3>
                   <hr>
                   <p>Övningarna mjukar upp musklerna.</p>
-                  <p><em>Ta gärna med barnen till 'Kom i form'. Lekrummet är öppet för alla barn i åldrarna ett till tolv, Lekledarna är där alla dagar från 16:30 till 20:30. Kom och lek!</em></p>
+                  <p><em>Ta gärna med barnen till 'Kom i form'. Lekrummet är öppet för alla barn i åldrarna ett till tolv år. Lekledarna är där alla dagar från 16:30 till 20:30. Kom och lek!</em></p>
                 </li>
                 <li>
                   <h2>Efter träningen</h2>
